--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -102,6 +102,276 @@
 </div> 
 -->
 
+<div class="card clearfix" data-score="23" data-price="12.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MQH6x6"><img src="https://images-na.ssl-images-amazon.com/images/I/71pMktGGyRL._SX679_.jpg" alt="Air Circulator Fan" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>23% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MQH6x6">Honeywell HT-900 TurboForce Air Circulator Fan Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$12.39</span><span class="ori_price">$15.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MQH6x6">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="53" data-price="18.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Iiz2Rw"><img src="https://images-na.ssl-images-amazon.com/images/I/81fNxrEV8bL._SX522_.jpg" alt="Logitech M510 Wireless Computer Mouse" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>53% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Iiz2Rw">Logitech M510 Wireless Computer Mouse – Comfortable Shape with USB Unifying Receiver, with Back/Forward Buttons and Side-to-Side Scrolling, Dark Gray</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$18.95</span><span class="ori_price">$39.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Iiz2Rw">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="32" data-price="43.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XltrCc"><img src="https://images-na.ssl-images-amazon.com/images/I/81t-gBB%2B2ZL._SX679_.jpg" alt="Flowtron BK-40D Electronic Insect Killer" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>32% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XltrCc">Flowtron BK-40D Electronic Insect Killer, 1 Acre Coverage</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$43.98</span><span class="ori_price">$64.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XltrCc">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="23" data-price="76.97">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Rl54iB"><img src="https://images-na.ssl-images-amazon.com/images/I/71z%2BDDF-YSL._SX522_.jpg" alt="FCMP Outdoor IM4000 Tumbling Composter" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>23% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Rl54iB">FCMP Outdoor IM4000 Tumbling Composter, 37 gallon</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$76.97</span><span class="ori_price">$99.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Rl54iB">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="54" data-price="91.97">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MQux4W"><img src="https://images-na.ssl-images-amazon.com/images/I/71u80OuhzuL._SX522_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>54% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MQux4W">XtremepowerUS Automatic Suction Vacuum-generic Climb Wall Pool Cleaner</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$91.97</span><span class="ori_price">$199.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MQux4W">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="35" data-price="26.11">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Rjdy9W"><img src="https://images-na.ssl-images-amazon.com/images/I/71B6uFlCNOL._SL1395_.jpg" alt="Camco 50ft Premium Drinking Water Hose" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>35% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Rjdy9W">Camco 50ft Premium Drinking Water Hose - Lead Free, Anti-Kink Design, 20% Thicker Than Standard Hoses (5/8"Inside Diameter)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$26.11</span><span class="ori_price">$39.89</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Rjdy9W">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="183.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KlGAFj"><img src="https://images-na.ssl-images-amazon.com/images/I/914TbMKh7hL._UY741_.jpg" alt="Ferrari Men's Watch" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KlGAFj">Ferrari Men's 0830310 XX KERS Analog Display Japanese Quartz Black Watch</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$183.00</span><span class="ori_price">$245.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2KlGAFj">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="45" data-price="162.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MRC6bR"><img src="https://images-na.ssl-images-amazon.com/images/I/61Qci9DrRpL._UX679_.jpg" alt="Bulova Men's Men's Essentials" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MRC6bR">Bulova Men's Men's Essentials - 96C105</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$162.98</span><span class="ori_price">$299.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MRC6bR">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="74.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KkwjcL"><img src="https://images-na.ssl-images-amazon.com/images/I/71bT2EcFMwL._SX522_.jpg" alt="TP-Link AV1000Mbps Powerline WiFi Extender" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KkwjcL">TP-Link AV1000Mbps Powerline WiFi Extender, Powerline Adapter – Dual band WiFi, Gigabit Port, Noise Suppression Design, Plug&Play</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$74.99</span><span class="ori_price">$99.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2KkwjcL">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="41.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KmHHEI"><img src="https://images-na.ssl-images-amazon.com/images/I/71Im8dBbQwL._SX679_.jpg" alt="Bluetooth Suitcase Turntable" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KmHHEI">Victrola Vintage 3-Speed Bluetooth Suitcase Turntable with Speakers, Aqua Turquoise</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$41.99</span><span class="ori_price">$69.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2KmHHEI">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="96.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IMqjpW"><img src="https://images-na.ssl-images-amazon.com/images/I/71MH8ZSLbAL._SX522_.jpg" alt="Logitech iPad Pro 10.5 inch Keyboard Case" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IMqjpW">Logitech iPad Pro 10.5 inch Keyboard Case | SLIM COMBO with Detachable, Backlit, Wireless Keyboard and Smart Connector</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$96.99</span><span class="ori_price">$129.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IMqjpW">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="5" data-price="76.93">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KmlIhu"><img src="https://images-na.ssl-images-amazon.com/images/I/81UMq4CqM6L._SY679_.jpg" alt="Garmin vívosmart HR Activity Tracker" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>5% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KmlIhu">Garmin vívosmart HR Activity Tracker Regular Fit - Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$76.93</span><span class="ori_price">$80.81</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2KmlIhu">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="79.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IjSSM8"><img src="https://images-na.ssl-images-amazon.com/images/I/8116DtW4WWL._SX522_.jpg" alt="Razer Ornata Chroma Gaming Keyboard" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IjSSM8">Razer Ornata Chroma Gaming Keyboard: Mecha-Membrane Key Switches - Customizable Chroma RGB Lighting</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$79.99</span><span class="ori_price">$99.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IjSSM8">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="44" data-price="47.57">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XfwGLv"><img src="https://images-na.ssl-images-amazon.com/images/I/71VReoeqwZL._SX679_.jpg" alt="Herschel Novel Duffle Bag" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>44% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XfwGLv">Herschel Novel Duffle Bag, Black, One Size</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$47.57</span><span class="ori_price">$84.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XfwGLv">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="23" data-price="30.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2RjbKxP"><img src="https://images-na.ssl-images-amazon.com/images/I/91aoTghr6xL._UX679_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>23% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2RjbKxP">Under Armour Undeniable Duffle 3.0 Gym Bag (Size: Small)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$30.99</span><span class="ori_price">$39.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2RjbKxP">Shop Now at Amazon</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="42" data-price="15.16">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2Xg1Faq"><img src="https://images-na.ssl-images-amazon.com/images/I/81TeJ-nysZL._SX679_.jpg" alt="Bamboo Charcoal Air Purifying Bag" /></a>
