--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -95,7 +95,6 @@
   .codes .lt_cnt .toggle>ul>.bestdeals>ul>li>a{background:#87c442;}
   .codes .lt_cnt .last7days_pc{display:none;}
   
-
   .codes .lt_cnt .toggle>ul>li>ul>.about_db_dis{}
   .codes .lt_cnt .toggle>ul>li>ul>.about_db_dis>.dou_red{background:#ff4d4d;color:#fff;padding:0 10px;border-radius:10px;}
   .codes .lt_cnt .toggle>ul>li>ul>.about_db_dis>.dou_green{background:#87c442;color:#fff;padding:0 10px;border-radius:10px}
@@ -126,7 +125,7 @@
   .codes .card_wrap .card .inner>em{display:block;margin-right:5px;font-size:13px;font-weight:400;}
   .codes .card_wrap .card .inner>em>span{font-size:12px;color:#ccc;text-decoration:line-through;margin-left:5px;}
   .codes .card_wrap .card .inner>.code_high>address{display:block;}
-  .codes .card_wrap .card .inner>.code_high>address>.dis_price{color:#08f;font-size:25px;margin-right:5px;}
+  .codes .card_wrap .card .inner>.code_high>address>.dis_price{color:#08f;font-size:25px;margin-right:5px;font-weight:700;}
   .codes .card_wrap .card .inner>.code_high>address>.bestdeals{color:#87c442;}
   .codes .card_wrap .card .inner>.code_high>address>.ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_red{margin-left:10px;position:relative;display:inline;background:#ff4d4d;color:#fff;padding:0 10px;border-radius:10px}
@@ -152,7 +151,7 @@
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span{}
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span>em{font-size:11px;text-decoration:line-through;color:#616161;margin-left:1%;}
   .codes .card_wrap .card .deal_btn{float:none;width:100%;padding:7px;margin-top:10px;}
-  .codes .card_wrap .card .deal_btn a{text-decoration:none;color:#616161;margin:20px 0 0 0;border:1px solid;padding:7px 20px;}
+  .codes .card_wrap .card .deal_btn a{text-decoration:none;color:#000;margin:20px 0 0 0;border:3px solid;padding:7px 20px;font-family: 'Montserrat', sans-serif;font-weight:bold;}
   .codes .rt_cnt .updating{font-size:30px;font-size:20px;font-family: 'Anton', sans-serif;margin-bottom:100px;}
   .codes .rt_cnt .updating a{display:block;text-decoration:none;color:#fff;background:#000;padding:5px 10px;}
 }
