--- a/app/views/guides/index.html.erb
+++ b/app/views/guides/index.html.erb
@@ -13,7 +13,8 @@
       </div>
 
       <div class="guide_wrap">
-        <div class="guide_box">
+
+        <!-- <div class="guide_box">
           <div class="image">
             <a href="/guides/gift_guide_01"><img src="https://grovemade.imgix.net/https%3A%2F%2Fsiteleaf.grovemade.com%2Fuploads%2Fapple-watch-charger-natural-cork-galB-C2.jpg?auto=format&ixlib=python-1.1.2&w=500&s=3a6079950d549e9ce3f4a345763db526"></a>
           </div>
@@ -78,8 +79,43 @@
             <p>Lotsen Multi-Room Wireless and Bluetooth Connected Speaker</p>
             <a class="btn" href="#n">READ MORE</a>
           </div>
+        </div> -->
+
+
+        <div class="guide_boxes clearfix">
+          <div class="box_img">
+            <a href="/guides/gift_guide_01">
+              <ul>
+                <li><img src="https://images-na.ssl-images-amazon.com/images/I/61VYkz33WNL._SX522_.jpg"></li>
+                <li><img src="https://images-na.ssl-images-amazon.com/images/I/61WhgoU4LzL._SX679_.jpg"></li>
+                <li><img src="https://images-na.ssl-images-amazon.com/images/I/A185AKfrliL._SX522_.jpg"></li>
+              </ul>
+            </a>
+          </div>
+          <div class="box_inner">
+            <a href="/guides/gift_guide_01"><p>38 Father's Day Gift Ideas for the Coolest Dad Around</p></a>
+          </div>
         </div>
+
+        <div class="guide_boxes clearfix">
+          <div class="box_img">
+            <a href="#n">
+              <ul>
+                <li><img src="https://images-na.ssl-images-amazon.com/images/I/616sJVZ0ixL._SX679_.jpg"></li>
+                <li><img src="https://images-na.ssl-images-amazon.com/images/I/71uX2g5BzvL._SX522_.jpg"></li>
+                <li><img src="https://images-na.ssl-images-amazon.com/images/I/61VYkz33WNL._SX522_.jpg"></li>
+              </ul>
+            </a>
+          </div>
+          <div class="box_inner">
+            <a href="#n"><p class="short_title">For crazy about PINK!!</p></a>
+          </div>
+        </div>
+
+
       </div>
+
+
 
     </div><!--./wrap-->
   </div><!--./layout-->
