--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -70,7 +70,7 @@
   .codes .card_wrap .card .inner>.code_high>em{font-size:13px;color:#616161;display:block;margin-top:3px;}
   .codes .card_wrap .card .inner>.code_high>p{color:#616161;font-size:13px;display:inline;border-bottom:0.4em solid rgba(51,51,255,0.2);position:relative;}
   .codes .card_wrap .card .inner>.code_high>p>span{position:relative;top:0.4em;}
-  .codes .card_wrap .card .inner>.code_high>p>span>strong{font-size:17px;color:#000;}
+  .codes .card_wrap .card .inner>.code_high>p>span>strong{font-size:17px;color:#000;font-weight:500;}
   .codes .card_wrap .card .inner>.code_high>.ex_date{display:block;font-size:13px;color:#616161;}
   .codes .card_wrap .card .inner>.code_high>ul{}
   .codes .card_wrap .card .inner>.code_high>ul>li{margin-bottom:10px;}
@@ -140,7 +140,7 @@
   .codes .card_wrap .card .inner>.code_high>em{font-size:13px;color:#616161;display:block;margin-top:3px;}
   .codes .card_wrap .card .inner>.code_high>p{display:inline;border-bottom:0.4em solid rgba(51,51,255,0.2);position:relative;}
   .codes .card_wrap .card .inner>.code_high>p>span{font-weight:400;position:relative;top:0.4em;}
-  .codes .card_wrap .card .inner>.code_high>p>span>strong{font-size:17px;color:#000;}
+  .codes .card_wrap .card .inner>.code_high>p>span>strong{font-size:17px;color:#000;font-weight:500;}
   .codes .card_wrap .card .inner>.code_high>.ex_date{display:block;font-size:13px;color:#616161;}
   .codes .card_wrap .card .inner>.code_high>ul{}
   .codes .card_wrap .card .inner>.code_high>ul>li{margin-bottom:10px;}
@@ -300,11 +300,11 @@
   /*.promotions .rt_cnt .box_wrap .box img{width:100%;-webkit-filter: grayscale(100%);filter:none;}*/
 }
 
-@media screen and (max-width:640px){
+/*@media screen and (max-width:640px){
   .fathers_day img{width:100%;}
 }
 @media screen and (min-width:641px) and (max-width:1199px){
   .fathers_day img{width:100%;} 
-}
+}*/
 
 
