--- a/app/views/recommends/index.html.erb
+++ b/app/views/recommends/index.html.erb
@@ -9,7 +9,7 @@
           <li><a class="active" href="/recommends">Featured</a></li>
           <!--<li><a href="/guides/index">Gift Guide</a></li>-->
           <!-- <li><a href="/editors/index">Editor's Pick</a></li> -->
-          <li><a href="/blogs/index">Blog</a></li>
+          <!-- <li><a href="/blogs/index">Blog</a></li> -->
         </ul>
       </div>
 
@@ -81,35 +81,6 @@
         
         <div class="rt_cnt">
           <h2>We Love </h2>
-          
-          <!--
-          <div class="gift_guide clearfix">
-            <a href="/gift_guide/gift_guide_01">
-              <div class="gift_box card_01">
-                <div class="inner">
-                  <p>FOR <span>HIM<span></p>
-                </div>
-              </div>
-            </a>
-          
-            <a href="/gift_guide/gift_guide_01">
-              <div class="gift_box card_02">
-                <div class="inner">
-                  <p>FOR <span>HER<span></p>
-                </div>
-              </div>
-            </a>
-          
-            <a href="/gift_guide/gift_guide_01">
-              <div class="gift_box card_03">
-                <div class="inner">
-                  <p>FOR <span>KIDS<span></p>
-                </div>
-              </div>
-            </a>
-          </div>
-          -->
-
           <div class="filter-group clearfix">
             <%= render 'recommends/body' %>
           </div>
