--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -1,6 +1,10 @@
 <!-- <div class="card clearfix" data-score="percentage" data-price="discounted_price">
   <div class="image_box">
     <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
+    <div class="rating">
+      <img src="<%= asset_path 'star-Rating_Num.jpg' %>">
+      <p>Review_Num Amazon Reviews</p>
+    </div>
   </div>
   <div class="inner">
     <span class="regular"><em>percentage% OFF</em> + free shipping</span>
@@ -20,6 +24,10 @@
 <div class="card clearfix" data-score="percentage" data-price="discounted_price">
   <div class="image_box">
     <a target="_blank" href="product_link"><img src="product_img" alt="Amazon Deal Of The Day" /></a>
+    <div class="rating">
+      <img src="<%= asset_path 'star-Rating_Num.jpg' %>">
+      <p>Review_Num Amazon Reviews</p>
+    </div>
   </div>
   <div class="inner">
     <span class="regular"><em>percentage% OFF</em> + free shipping</span>
@@ -68,6 +76,10 @@
 <div class="card clearfix" data-score="percentage" data-price="discounted_price">
   <div class="image_box">
     <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
+    <div class="rating">
+      <img src="<%= asset_path 'star-Rating_Num.jpg' %>">
+      <p>Review_Num Amazon Reviews</p>
+    </div>
   </div>
   <div class="inner">
     <span class="regular"><em>percentage% OFF</em> + free shipping</span>
@@ -104,9 +116,15 @@
 
 
 <div class="card clearfix" data-score="46" data-price="discounted_price">
+
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2Kneqdm"><img src="https://images-na.ssl-images-amazon.com/images/I/51PCNITGywL._AC_SR300,300_.jpg" alt="Amazon Deal Of The Day" /></a>
+    <div class="rating">
+      <img src="<%= asset_path 'star-4_5.jpg' %>">
+      <p>Review_Num Amazon Reviews</p>
+    </div>
   </div>
+
   <div class="inner">
     <span class="regular"><em>Up to 46% OFF</em> + free shipping</span>
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
@@ -122,12 +140,16 @@
             <li><a href="https://amzn.to/2Kneqdm">- SEE MORE</a></li>
           </ul>
         </li>
+      </ul>
       <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
-  </div> 
+  </div>
+
   <div class="deal_btn">
     <a target="_blank" href="https://amzn.to/2Kneqdm">Shop Now at Amazon</a>
   </div>
+
 </div>
 
 <div class="card clearfix" data-score="69" data-price="discounted_price">
@@ -150,6 +172,7 @@
             <li><a href="https://amzn.to/2WMA7oA">- SEE MORE</a></li>
           </ul>
         </li>
+      </ul>
       <em>*Pricing may change and deals can expire fast.</em>
     </div>
   </div> 
