--- a/app/views/guides/gift_guide_01.html.erb
+++ b/app/views/guides/gift_guide_01.html.erb
@@ -53,7 +53,7 @@
               <strong>BY AMAZON</strong>
               <em>$100.00</em>
               <p>$70.00 (30% OFF)</p>
-              <a href="#n">Check it Out at <span>Amazon</span></a>
+              <a href="#n">Check it Out on <span>Amazon</span></a>
             </div>
           </div>
         </div>
@@ -69,7 +69,7 @@
               <strong>BY AMAZON</strong>
               <em>$100.00</em>
               <p>$70.00 (30% OFF)</p>
-              <a href="#n">Check it Out at <span>Amazon</span></a>
+              <a href="#n">Check it Out on <span>Amazon</span></a>
             </div>
           </div>
         </div>
@@ -85,7 +85,7 @@
               <strong>BY AMAZON</strong>
               <em>$100.00</em>
               <p>$70.00 (30% OFF)</p>
-              <a href="#n">Check it Out at <span>Amazon</span></a>
+              <a href="#n">Check it Out on <span>Amazon</span></a>
             </div>
           </div>
         </div>
@@ -101,7 +101,7 @@
               <strong>BY AMAZON</strong>
               <em>$100.00</em>
               <p>$70.00 (30% OFF)</p>
-              <a href="#n">Check it Out at <span>Amazon</span></a>
+              <a href="#n">Check it Out on <span>Amazon</span></a>
             </div>
           </div>
         </div>
@@ -117,7 +117,7 @@
               <strong>BY AMAZON</strong>
               <em>$100.00</em>
               <p>$70.00 (30% OFF)</p>
-              <a href="#n">Check it Out at <span>Amazon</span></a>
+              <a href="#n">Check it Out on <span>Amazon</span></a>
             </div>
           </div>
         </div>
@@ -133,7 +133,7 @@
               <strong>BY AMAZON</strong>
               <em>$100.00</em>
               <p>$70.00 (30% OFF)</p>
-              <a href="#n">Check it Out at <span>Amazon</span></a>
+              <a href="#n">Check it Out on <span>Amazon</span></a>
             </div>
           </div>
         </div>
@@ -149,7 +149,7 @@
               <strong>BY AMAZON</strong>
               <em>$100.00</em>
               <p>$70.00 (30% OFF)</p>
-              <a href="#n">Check it Out at <span>Amazon</span></a>
+              <a href="#n">Check it Out on <span>Amazon</span></a>
             </div>
           </div>
         </div>
@@ -164,7 +164,7 @@
             <strong>BY AMAZON</strong>
             <em>$100.00</em>
             <p>$70.00 (30% OFF)</p>
-            <a href="#n">Check it Out at <span>Amazon</span></a>
+            <a href="#n">Check it Out on <span>Amazon</span></a>
           </div>
         </div>
 
@@ -178,7 +178,7 @@
             <strong>BY AMAZON</strong>
             <em>$100.00</em>
             <p>$70.00 (30% OFF)</p>
-            <a href="#n">Check it Out at <span>Amazon</span></a>
+            <a href="#n">Check it Out on <span>Amazon</span></a>
           </div>
         </div>
         
@@ -192,7 +192,7 @@
             <strong>BY AMAZON</strong>
             <em>$100.00</em>
             <p>$70.00 (30% OFF)</p>
-            <a href="#n">Check it Out at <span>Amazon</span></a>
+            <a href="#n">Check it Out on <span>Amazon</span></a>
           </div>
         </div>
 
@@ -206,7 +206,7 @@
             <strong>BY AMAZON</strong>
             <em>$100.00</em>
             <p>$70.00 (30% OFF)</p>
-            <a href="#n">Check it Out at <span>Amazon</span></a>
+            <a href="#n">Check it Out on <span>Amazon</span></a>
           </div>
         </div>
 
@@ -220,7 +220,7 @@
             <strong>BY AMAZON</strong>
             <em>$100.00</em>
             <p>$70.00 (30% OFF)</p>
-            <span>Check it Out at <a href="#n"> Amazon</a></span>
+            <span>Check it Out on <a href="#n"> Amazon</a></span>
           </div>
         </div> -->
 
