--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -41,10 +41,13 @@
   .codes .rt_cnt .updating a{text-decoration:none;margin-left:10px;color:#fff;background:#000;padding:5px 10px;}
 
   .codes .card_wrap{margin:20px 0 0 0;}
-  .codes .card_wrap .card{border-bottom:1px solid #ccc;margin:0 0 15px 0;padding-bottom:10px;}
+  .codes .card_wrap .card{border-bottom:1px solid #ccc;margin:0 0 15px 0;padding-bottom:10px;height:260px;}
   .codes .card_wrap .card .image_box{float:left;width:20%;height:167px;padding:1.5%;}
   .codes .card_wrap .card .image_box img{width:100%;height:167px;object-fit:contain;}
   .codes .card_wrap .card .image_box a{display:block;}
+  .codes .card_wrap .card .image_box .rating{}
+  .codes .card_wrap .card .image_box .rating img{width:100px;height:22px;}
+  .codes .card_wrap .card .image_box .rating p{margin-left:2%;font-size:13px;}
   .codes .card_wrap .card .inner{font-family: 'Montserrat', sans-serif;font-weight:400;border-right:1px solid #ccc;border-left:1px solid #ccc;float:left;width:57%;padding:1.5%;}
   .codes .card_wrap .card .inner>.regular{color:#000;font-size:17px;border-bottom:2px solid #000;}
   .codes .card_wrap .card .inner>.regular>em{background:#000;padding:0 5px;color:#fff;}
@@ -67,11 +70,11 @@
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_orange{margin-left:10px;position:relative;display:inline;background:#e47911;color:#fff;padding:0 10px;border-radius:10px;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_orange>.tooltip-content{visibility:hidden;width:400px;background:#e47911;padding:7px 7px;color:white;text-align:center;position:absolute;z-index:1;line-height:1.2;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_orange:hover>.tooltip-content{visibility: visible;}
-  .codes .card_wrap .card .inner>.code_high>em{font-size:13px;color:#616161;display:block;margin-top:3px;}
+  .codes .card_wrap .card .inner>.code_high>em{font-size:12px;color:#616161;display:block;}
   .codes .card_wrap .card .inner>.code_high>p{color:#616161;font-size:13px;display:inline;border-bottom:0.4em solid rgba(51,51,255,0.2);position:relative;}
   .codes .card_wrap .card .inner>.code_high>p>span{position:relative;top:0.4em;}
   .codes .card_wrap .card .inner>.code_high>p>span>strong{font-size:17px;color:#000;font-weight:500;}
-  .codes .card_wrap .card .inner>.code_high>.ex_date{display:block;font-size:13px;color:#616161;}
+  .codes .card_wrap .card .inner>.code_high>.ex_date{display:block;font-size:13px;color:#616161;margin-bottom:3px;}
   .codes .card_wrap .card .inner>.code_high>ul{}
   .codes .card_wrap .card .inner>.code_high>ul>li{margin-bottom:10px;}
   .codes .card_wrap .card .inner>.code_high>ul>li>p{font-size:17px;}
@@ -114,7 +117,10 @@
   .codes .card_wrap{/*column-width:170px;*/column-gap:5px;column-count:1;}
   .codes .card_wrap .card{display:inline-block;margin:0;margin-bottom:30px;padding:5px;border-bottom:1px solid #ddd;}
   .codes .card_wrap .card .image_box{text-align:center;}
-  .codes .card_wrap .card .image_box img{width:70%;height:200px;object-fit:contain;margin-bottom:50px;}
+  .codes .card_wrap .card .image_box img{width:70%;height:200px;object-fit:contain;margin-bottom:70px;}
+  .codes .card_wrap .card .image_box .rating{}
+  .codes .card_wrap .card .image_box .rating img{width:100px;height:22px;;}
+  .codes .card_wrap .card .image_box .rating p{margin-bottom:70px;}
   .codes .card_wrap .card .inner{padding:7px;font-family: 'Montserrat', sans-serif;font-weight:400}
   .codes .card_wrap .card .inner>.regular{font-size:13px;border-bottom:2px solid #000;}
   .codes .card_wrap .card .inner>.regular>em{background:#000;padding:0 5px;color:#fff;}
@@ -150,7 +156,7 @@
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>a{text-decoration:none;color:#08f;}
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span{}
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span>em{font-size:11px;text-decoration:line-through;color:#616161;margin-left:1%;}
-  .codes .card_wrap .card .deal_btn{float:none;width:100%;padding:7px;margin-top:10px;}
+  .codes .card_wrap .card .deal_btn{float:none;width:100%;padding:7px;margin:10px 0;}
   .codes .card_wrap .card .deal_btn a{text-decoration:none;color:#000;margin:20px 0 0 0;border:3px solid;padding:7px 20px;font-family: 'Montserrat', sans-serif;font-weight:bold;}
   .codes .rt_cnt .updating{font-size:30px;font-size:20px;font-family: 'Anton', sans-serif;margin-bottom:100px;}
   .codes .rt_cnt .updating a{display:block;text-decoration:none;color:#fff;background:#000;padding:5px 10px;}
